# project-mcp-tools

./: .gitignore  AGENTS.md  README.md  main.py  opencode.json  pyproject.toml  sak
.agents/skills/project-compliance-audit/: SKILL.md
cpp/: analyze.py  code_verifier.py  compile.py  create_class.py  create_test.py  include_tree.py  llm_verifier.py
cpp/cpp_lib/: build_runner.py  clang.py  cpp_check.py  cpp_include_tree.py  cpp_project_config.py  cpp_project_model.py  cpp_verifier.py  llm_rules.py  llm_verifier_core.py  project_core.py
docs/agent/: architecture.md  status.md
docs/agent/development/: adding-tools.md  index.md  llm-verifier.md
docs/agent/sak/: bash.md  cpp.md  index.md  lua.md  python.md
docs/agent/style-guide/: all.md  cpp.md  index.md  python.md
docs/example/: google-genai.py
docs/templates/: file-header.txt
general/: create_aliases.py  create_image.py  debug.py  get_random_number.py
general/general_lib/: image_generator.py
git/: discard_changes.py  pull_submodules.py  quick_upload.py  reset_repository.py
git/git_lib/: submodules.py
lib/: base_verifier.py  project_config.py  project_file.py  template.py
loop/: loop_engine.py
loop/loop_lib/: engine_core.py  opencode_runner.py  process_guard.py  session_monitor.py  verdict.py
python/: analyze.py  clear.py  code_verifier.py
python/python_lib/: python_config.py  python_project_model.py  python_verifier.py
sak-lib/bash/: bash-swiss-army-knife
sak-lib/cpp/sak/: sak.hpp  (+4 more)
scripts/: debug  project-mcp-tools
tools/: folder_scanner.py  path_manager.py  tool.py  tool_manager.py
(+41 files in other folders)
