[project]
name = "project-mcp-tools"
version = "0.1.0"
description = "project-mcp-tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastmcp>=3.4.1",
    "typer>=0.15.0",
    "google-genai>=2.10.0",
    "ipython>=9.15.0",
]

[project.scripts]
mcp-server = "main:main_mcp"
api = "main:main_api"
cli = "main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = true
